--- a/index.html
+++ b/index.html
@@ -71,20 +71,20 @@
           loading="lazy" width="700" height="500">
       </div>
       <div class="col-lg-6">
-        <h1 class="display-5 fw-bold lh-1 mb-3">Hire smart contract developers</h1>
-        <p class="lead">We are experienced smart contract developers with multiple successful launches. Get in touch
-          today and discuss your project.</p>
+        <h1 class="display-5 fw-bold lh-1 mb-3">Create your BEP20 token</h1>
+        <p class="lead">Our mission is to make token creation easy and accessible for everyone. You can create your own
+          token without coding.</p>
         <div class="d-grid gap-2 d-md-flex justify-content-md-start">
 
-          <button type="button" onclick="gtag('event','join_telegram');location.href='https://t.me/TokenGeneratorBSC';"
-            class="btn btn-primary btn-lg px-4 me-md-2">Chat with dev</button>
-          <!-- 
+          <button type="button" onclick="gtag('event','open_builder');location.href='/bep20-token-generator';"
+            class="btn btn-primary btn-lg px-4 me-md-2">Create Token</button>
+
           <button type="button" onclick="gtag('event','learn_more');location.href='#features'"
             class="btn btn-outline-secondary btn-lg px-4">Learn
-            More</button> -->
+            More</button>
 
-          <button type="button" onclick="gtag('event','open_builder');location.href='/bep20-token-generator'"
-            class="btn btn-outline-secondary btn-lg px-4">Try BEP20 token generator</button>
+          <!-- <button type="button" onclick="gtag('event','open_builder');location.href='/bep20-token-generator'"
+            class="btn btn-outline-secondary btn-lg px-4">Create Token</button> -->
         </div>
       </div>
     </div>
