--- a/bep20-token-generator/index.html
+++ b/bep20-token-generator/index.html
@@ -172,7 +172,8 @@
           <li class="nav-item " role="presentation">
             <button class="nav-link border active" id="basic-tab" data-bs-toggle="tab" data-bs-target="#basic"
               type="button" role="tab" aria-controls="basic" aria-selected="true">
-              Standard <span class="badge bg-primary">Free</span>
+              Standard
+              <!-- <span class="badge bg-primary">Free</span> -->
             </button>
           </li>
 
@@ -1376,7 +1377,7 @@
             👈
           </p>
           <div class="text-center">
-            <p id="price" style="background-color: greenyellow">FREE</p>
+            <p id="price" style="background-color: greenyellow">0.1 BNB</p>
             <p> GAS fee will be added to final amount</p>
             <p id="tx_fee" hidden> 3% transaction fees when sell</p>
           </div>
