--- a/bep20-token-generator/index.html
+++ b/bep20-token-generator/index.html
@@ -242,7 +242,7 @@
           <li class="nav-item" role="presentation">
             <button class="nav-link border" id="safemoon-tab" data-bs-toggle="tab" data-bs-target="#safemoon"
               type="button" role="tab" aria-controls="safemoon" aria-selected="false">
-              SafeMoon Twin 🌙
+              SafeMoon Twin
             </button>
           </li>
 
