--- a/bep20-wallet-generator/index.html
+++ b/bep20-wallet-generator/index.html
@@ -17,6 +17,8 @@
   <meta property="twitter:description"
     content="BEP20 Wallet Generator is a free generator using your web browser to generate BEP20 addresses. Don't need to install any software. BEP20 Wallet Generator provides an encrypted keystore compatible with MyEtherWallet, MetaMask, Mist, and geth." />
 
+
+  <link rel="canonical" href="https://vanity-eth.tk/">
   <meta property="og:url" content="https://safemoonmaker.github.io/bep20-wallet-generator" />
   <meta property="og:site_name" content="BEP20 Wallet Generator | Generate BEP20 addresses quickly and secure" />
   <meta property="og:image" content="img/bep20-wallet-generator.png" />
