--- a/bep20-token-generator/index.html
+++ b/bep20-token-generator/index.html
@@ -242,7 +242,7 @@
           <li class="nav-item" role="presentation">
             <button class="nav-link border" id="safemoon-tab" data-bs-toggle="tab" data-bs-target="#safemoon"
               type="button" role="tab" aria-controls="safemoon" aria-selected="false">
-              SafeMoon Twin
+              SafeMoon Twin 🌙
             </button>
           </li>
 
@@ -474,7 +474,7 @@
 
               </div>
               <div class="modal-body">
-                <p class="text-center">Price: <span id="modalBody">5</span>&nbsp;BNB </p>
+                <p hidden class="text-center">Price: <span id="modalBody">5</span>&nbsp;BNB </p>
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal" id="closeDialog">Close</button>
@@ -483,8 +483,6 @@
             </div>
           </div>
         </div>
-
-
 
         <div class="tab-content" id="myTabContent">
           <div class="tab-pane fade show active" id="basic" role="tabpanel" aria-labelledby="home-tab">
