--- a/bep20-token-generator/index.html
+++ b/bep20-token-generator/index.html
@@ -172,22 +172,21 @@
           <li class="nav-item " role="presentation">
             <button class="nav-link border active" id="basic-tab" data-bs-toggle="tab" data-bs-target="#basic"
               type="button" role="tab" aria-controls="basic" aria-selected="true">
-              Standard
-              <!-- <span class="badge bg-primary">Free</span> -->
+              Standard <span class="badge bg-primary">Free</span>
             </button>
           </li>
 
           <li class="nav-item " role="presentation">
             <button class="nav-link border" id="mintable-tab" data-bs-toggle="tab" data-bs-target="#mintable"
               type="button" role="tab" aria-controls="mintable" aria-selected="true">
-              Mintable
+              Mintable <span class="badge bg-primary">Free</span>
             </button>
           </li>
 
           <li class="nav-item " role="presentation">
             <button class="nav-link border" id="burnable-tab" data-bs-toggle="tab" data-bs-target="#burnable"
               type="button" role="tab" aria-controls="burnable" aria-selected="true">
-              Burnable
+              Burnable <span class="badge bg-primary">Free</span>
 
             </button>
           </li>
@@ -198,35 +197,35 @@
             </button>
           </li>
 
-          <li class="nav-item " role="presentation">
+          <li hidden class="nav-item " role="presentation">
             <button class="nav-link border" id="recovery-tab" data-bs-toggle="tab" data-bs-target="#basic" type="button"
               role="tab" aria-selected="true">
               Recovery
             </button>
           </li>
 
-          <li class="nav-item " role="presentation">
+          <li hidden class="nav-item " role="presentation">
             <button class="nav-link border" id="upgradable-tab" data-bs-toggle="tab" data-bs-target="#basic"
               type="button" role="tab" aria-selected="true">
               Upgradable
             </button>
           </li>
 
-          <li class="nav-item " role="presentation">
+          <li hidden class="nav-item " role="presentation">
             <button class="nav-link border" id="memeCoin-tab" data-bs-toggle="tab" data-bs-target="#basic" type="button"
               role="tab" aria-controls="basic" aria-selected="true">
               Meme Coin
             </button>
           </li>
 
-          <li class="nav-item " role="presentation">
+          <li hidden class="nav-item " role="presentation">
             <button class="nav-link border" id="awesomeToken-tab" data-bs-toggle="tab" data-bs-target="#awesomeToken"
               type="button" role="tab" aria-selected="true">
               Awesome Token
             </button>
           </li>
 
-          <li class="nav-item " role="presentation">
+          <li hidden class="nav-item " role="presentation">
             <button class="nav-link border" id="tinyToken-tab" data-bs-toggle="tab" data-bs-target="#basic"
               type="button" role="tab" aria-selected="true">
               Tiny Token
@@ -242,7 +241,7 @@
           <li class="nav-item" role="presentation">
             <button class="nav-link border" id="safemoon-tab" data-bs-toggle="tab" data-bs-target="#safemoon"
               type="button" role="tab" aria-controls="safemoon" aria-selected="false">
-              SafeMoon Twin 🌙
+              SafeMoon
             </button>
           </li>
 
@@ -268,21 +267,18 @@
               Deflationary
             </button>
           </li>
-
-          <li class="nav-item " role="presentation">
-            <button class="nav-link border" id="buyBackAndBurn-tab" data-bs-toggle="tab"
-              data-bs-target="#buyBackAndBurn" type="button" role="tab" aria-selected="true">
-              BuyBack and Burn
-            </button>
-          </li>
-
           <li class="nav-item" role="presentation">
             <button class="nav-link border" id="rewardtoken-tab" data-bs-toggle="tab" data-bs-target="#rewardtoken"
               type="button" role="tab" aria-controls="rewardtoken" aria-selected="false">
               Reward Token <span class="badge bg-danger">Hot🔥</span>
             </button>
           </li>
-
+          <li class="nav-item " role="presentation">
+            <button class="nav-link border" id="buyBackAndBurn-tab" data-bs-toggle="tab"
+              data-bs-target="#buyBackAndBurn" type="button" role="tab" aria-selected="true">
+              BuyBack and Burn
+            </button>
+          </li>
           <li class="nav-item" role="presentation">
             <button class="nav-link border" id="customized-tab" data-bs-toggle="tab" data-bs-target="#customized"
               type="button" role="tab" aria-controls="customized" aria-selected="false">
@@ -1375,7 +1371,7 @@
             👈
           </p>
           <div class="text-center">
-            <p id="price" style="background-color: greenyellow">0.1 BNB</p>
+            <p id="price" style="background-color: greenyellow">FREE</p>
             <p> GAS fee will be added to final amount</p>
             <p id="tx_fee" hidden> 3% transaction fees when sell</p>
           </div>
@@ -1765,7 +1761,7 @@
     <!-- Include this in your HTML page -->
 
     <!-- Start of HubSpot Embed Code -->
-    <script type="text/javascript" id="hs-script-loader" async defer src="//js-eu1.hs-scripts.com/25571645.js"></script>
+    <!-- <script type="text/javascript" id="hs-script-loader" async defer src="//js-eu1.hs-scripts.com/25571645.js"></script> -->
     <!-- End of HubSpot Embed Code -->
 </body>
 
