--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>
-    SafeMoon Maker | BEP20 Token Generator | Create BEP20 Token for FREE on
-    Binance Smart Chain
+    SafeMoon Maker | BSC Token Generator | Create BSC Token | BEP20 Token Maker | Create Deflationary BEP20 Token
   </title>
   <link rel="icon" href="/static/media/icon.png" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" />
@@ -26,7 +25,7 @@
 
   <link rel="stylesheet" href="/static/styles.css" />
   <meta name="description"
-    content="Create a BEP20 Token in less than a minute with BEP20 token generator for FREE on Binance Smart Chain. No login. No setup. No coding required." />
+    content="⭐Create your BEP20 tokens on BSC. Generate tokenomics without coding. Professional BEP20 token development." />
   <meta property="twitter:title" content="BEP20 Token Generator | Create BEP20 Token for FREE on Binance Smart Chain" />
   <meta property="og:title" content="BEP20 Token Generator | Create BEP20 Token for FREE on Binance Smart Chain" />
   <meta property="twitter:description"
@@ -375,6 +374,198 @@
     </section>
     <!--Section: FAQ-->
   </div>
+  <!-- <div class="accordion container" id="accordionExample">
+     <h3>FAQ</h3>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingOne">
+          <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+            How to use SafeMoon Maker?
+          </button>
+        </h2>
+        <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+          <div class="accordion-body">
+            <p style="background-color: wheat">
+              🕶️ <strong>Requirements =</strong> use a supported desktop browser (<a
+                href="https://www.google.com/chrome/"
+                >Chrome</a
+              >, <a href="https://www.mozilla.org/en-US/firefox/new/">Firefox</a>, <a href="https://brave.com/">Brave</a>, <a href="https://www.microsoft.com/en-us/edge">Edge</a> ) <strong>+</strong>
+              install <a href="https://metamask.io/download.html">Metamask</a>
+                 </a
+              >browser wallet
+              <strong>+</strong> connect Metamask to
+              <a
+                href="https://academy.binance.com/en/articles/connecting-metamask-to-binance-smart-chain"
+                > Binance Smart Chain</a
+              >
+            </p>
+            <strong>
+            <br> - Enter the required information
+            <br> - Click APPROVE, wait for a moment
+            <br> - Click CREATE, wait for a moment 
+            <br> - DONE! 
+            </strong>
+            </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingTwo">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+            Why I don't see token name in BSC scan ?
+          </button>
+        </h2>
+        <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+          <div class="accordion-body">
+            <strong>This is because BSC scan only shows token name for tokens with at least 2 holders. Try transfer your tokens to another wallet, you will see token name and other information.</strong> </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingThree">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+            How much do GAS fees cost? 
+          </button>
+        </h2>
+        <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+          <div class="accordion-body">
+            <strong>It costs few cents depending on network congestion.</strong>          </div>
+        </div>
+      </div>
+    </div> -->
+  <div class="container" id="launch" hidden>
+    <div class="row">
+      <div class="col">
+        <h3 class="fw-bold mb-0">🚀 How to launch your own token ?</h3>
+        <br />
+        <ul>
+          <li>
+            Add Liquidity to Pancakeswap, so that others can buy and sell it.
+          </li>
+          <li>Share it to your family and friends</li>
+          <li>Tell the world about your own tokens, and go to the moon!</li>
+        </ul>
+        <br />
+        <br />
+      </div>
+      <div class="col d-flex justify-content-center">
+        <lottie-player src="https://assets2.lottiefiles.com/private_files/lf30_zxrt6xaq.json" background="transparent"
+          speed="1" style="width: 300px; height: 300px" loop autoplay></lottie-player>
+      </div>
+    </div>
+    <br /><br /><br />
+    <div class="row" id="ref_id" hidden>
+      <div class="col">
+        <h3 class="fw-bold mb-0">💰 Want to make some passive income?</h3>
+        <div class="d-flex justify-content-center">
+          <lottie-player src="https://assets3.lottiefiles.com/packages/lf20_OdVhgq.json" background="transparent"
+            speed="1" style="width: 300px; height: 300px" loop autoplay></lottie-player>
+        </div>
+      </div>
+      <div class="col">
+        <br />
+
+        <br />
+        <p class="earnRefferalText">
+          Earn money every time a new token's created using your link below.
+        </p>
+        <br />
+        <div class="row">
+          <mark class="col-sm ref_link">https://safemoonmaker.github.io?id=change_to_your_eth_address</mark>
+          <div class="col-sm-1"></div>
+
+          <button class="col-sm-2 btn btn-outline-primary copy_ref_link" id="copy-button" title="Copy to clipboard">
+            Copy
+          </button>
+        </div>
+      </div>
+    </div>
+
+    <br />
+  </div>
+  <div class="row text-center my-0 countdown" id="buy_token" hidden>
+    <h2 class="my-3">PRESALE <strong>COUNTDOWN</strong></h2>
+    <div id="clockdiv">
+      <div>
+        <span class="days">00</span>
+        <div class="smalltext">Days</div>
+      </div>
+      <div>
+        <span class="hours">00</span>
+        <div class="smalltext">Hours</div>
+      </div>
+      <div>
+        <span class="minutes">00</span>
+        <div class="smalltext">Minutes</div>
+      </div>
+      <div>
+        <span class="seconds">00</span>
+        <div class="smalltext">Seconds</div>
+      </div>
+    </div>
+    <p class="my-3">
+      After Presale ends, SafeMoonMaker will be live on Pancakeswap.
+    </p>
+  </div>
+
+  <div class="container" hidden>
+    <div class="row">
+      <div class="col-sm-6">
+        <h3 class="fw-bold mb-0">✅ Invest in SafeMoonMaker token</h3>
+        <br />
+        <ul>
+          <li>The only token that creates other tokens 🤑</li>
+          <li>Make cryptos easier for everyone ❤️</li>
+          <li>Enjoy massive growth potential 🚀</li>
+        </ul>
+        <br />
+        <h5>
+          <strong>💶 Tokenomics:</strong>
+        </h5>
+        <p>💰Total Supply: 1000000000 tokens</p>
+
+        <p>💸Tokens For Presale: 500000000 tokens</p>
+        <p>🔖Presale Rate: 5000000.0000 SMM per BNB</p>
+        <p>📈Market Cap: $62568</p>
+        <br />
+      </div>
+      <div class="col text-center">
+        <h5 class="col"><strong>Token Address</strong></h5>
+        <div class="row my-3">
+          <mark class="col-sm tokenAddress">0x56fb94eda9bf5e32520e636d270F52bf2bf1F1bE</mark>
+          <div class="col-sm-1"></div>
+
+          <button class="col-sm-2 btn btn-outline-primary copy_ref_link" id="copy-token-address"
+            title="Copy to clipboard">
+            Copy
+          </button>
+
+          <!-- <div class="col-sm-12 d-flex justify-content-center my-3"">
+              <button class="btn btn-outline-secondary">Chart</button>
+            </div> -->
+        </div>
+
+        <div class="row my-5">
+          <div class="form-group row">
+            <label>Enter the amount you want to buy!</label>
+            <div class="col">
+              <input min="0.1" max="100" step="0.5" class="buyAmount" type="number" placeholder="1 BNB = 5000000 SMM" />
+            </div>
+          </div>
+
+          <p class="my-4 showTokenAmount" style="display: block">
+            You will get <span class="tokenAmount"></span> SafeMoonMaker
+            tokens!
+          </p>
+
+          <div class="col-sm-12 d-flex justify-content-center">
+            <button class="buy_token btn btn-primary buyToken">Buy</button>
+          </div>
+
+          <p class="my-5" style="color: rgb(96, 96, 250)">
+            ***Note: You need to add the token address to your wallet
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <!-- Footer -->
   <footer class="text-center text-lg-start bg-light text-muted mt-5">
@@ -514,7 +705,7 @@
   <!-- <script src="/static/buyToken.js"></script> -->
   <!-- Include this in your HTML page -->
   <!-- Start of HubSpot Embed Code -->
-  <script type="text/javascript" id="hs-script-loader" async defer src="//js-eu1.hs-scripts.com/25571645.js"></script>
+  <!-- <script type="text/javascript" id="hs-script-loader" async defer src="//js-eu1.hs-scripts.com/25571645.js"></script> -->
   <!-- End of HubSpot Embed Code -->
 </body>
 
